security_groups.tf
##########################
# AWS Security group - load balancer 
##########################
resource "aws_security_group" "alb" {
  name   = var.sg_dinusha_elb
  vpc_id = aws_vpc.vpc.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    "Name" = "dinusha_ha_sg_lb"
  }
}

##########################
# AWS Security group - EC2
##########################
resource "aws_security_group" "ec2_app" {
  vpc_id = aws_vpc.vpc.id

  ingress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    security_groups = [aws_security_group.alb.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    "Name" = "dinusha_ha_sg_ec2"
  }
}

##########################
# AWS Security group - EC2 bastion
##########################
resource "aws_security_group" "ec2_bastion" {
  vpc_id = aws_vpc.vpc.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    "Name" = "dinusha_ha_sg_ec2_bastion"
  }
}
